[package]
name = "enet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enet-sys = "1.0.1"
thiserror = "1.0.37"
serde = { version = "1.0.159", features=["derive"] }

[dev-dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"

